overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@ body {
     sans-serif;
   background-color: #000;
   color: #fff;
+  overflow-x: hidden;
 }
 
 a {
